--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,15 +15,15 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - "1.6"  # LTS
+          # - "1.6"  # LTS
           - "1"    # Latest Release
         os:
           - ubuntu-latest
-          - macOS-latest
-          - windows-latest
+          # - macOS-latest
+          # - windows-latest
         arch:
           - x64
-          - x86
+          # - x86
         exclude:
           # Exclude 32-bit macOS due to Julia support
           - os: macOS-latest
