--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,12 @@ PrecompileSignatures = "91cefc8d-f054-46dc-8f8c-26e11d7c5411"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
+[compat]
+DocStringExtensions = "0.8, 0.9"
+julia = "1"
+PrecompileSignatures = "3"
+NumericalTypeAliases = "0.1, 0.2"
+
 [extras]
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
