--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 DemoCards = "311a05b2-6137-4a5a-b473-18580a3d38b5"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 OAR = "2c0fe338-9bab-4ad6-9854-394aaab43699"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
