--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
 DocStringExtensions = "0.8, 0.9"
+MLDatasets = "0.7"
 NumericalTypeAliases = "0.1, 0.2"
 PrecompileSignatures = "3"
 julia = "1"
