--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -13,6 +13,9 @@ jobs:
         name: Build and push Docker image to Docker Hub
         runs-on: ubuntu-latest
         steps:
+            -
+                name: Checkout
+                uses: actions/checkout@v3
             # -   name: Set up QEMU
             #     uses: docker/setup-qemu-action@v2
             -   name: Set up Docker Buildx
