--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -3,10 +3,9 @@ name: Docker
 on:
     push:
         branches:
-            - main
-            - develop
-        tags: '*'
-    pull_request:
+            - docker
+        # tags: '*'
+    # pull_request:
 
 jobs:
     push_to_registry:
