--- a/Project.toml
+++ b/Project.toml
@@ -13,21 +13,22 @@ MLDataUtils = "cc2ba9b6-d476-5e6d-8eaf-a92d5412d41d"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 NumericalTypeAliases = "be9b823e-291e-41a1-b8ce-806204e78f92"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PrecompileSignatures = "91cefc8d-f054-46dc-8f8c-26e11d7c5411"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
-DataStructures = "0.18"
 AdaptiveResonance = "0.8"
+DataStructures = "0.18"
 DocStringExtensions = "0.8, 0.9"
 DrWatson = "2"
-MLDatasets = "0.7"
 MLDataUtils = "0.5"
+MLDatasets = "0.7"
 NumericalTypeAliases = "0.1, 0.2"
 PrecompileSignatures = "3"
-Revise = "3"
 Reexport = "1"
+Revise = "3"
 julia = "1"
 
 [extras]
