--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 NumericalTypeAliases = "be9b823e-291e-41a1-b8ce-806204e78f92"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 PrecompileSignatures = "91cefc8d-f054-46dc-8f8c-26e11d7c5411"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
