--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ DrWatson = "2"
 MLDataUtils = "0.5"
 MLDatasets = "0.7"
 NumericalTypeAliases = "0.1, 0.2"
+PlutoUI = "0.7"
 PrecompileSignatures = "3"
 Reexport = "1"
 Revise = "3"
