--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -7,3 +7,4 @@ MLDataUtils = "cc2ba9b6-d476-5e6d-8eaf-a92d5412d41d"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 OAR = "2c0fe338-9bab-4ad6-9854-394aaab43699"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
