Add Lerche dep, rosetta script

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ AdaptiveResonance = "3d72adc0-63d3-4141-bf9b-84450dd0395b"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+Lerche = "d42ef402-04e6-4356-9f73-091573ea58dc"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MLDataUtils = "cc2ba9b6-d476-5e6d-8eaf-a92d5412d41d"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
