--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ AdaptiveResonance = "0.8"
 DataStructures = "0.18"
 DocStringExtensions = "0.8, 0.9"
 DrWatson = "2"
+Lerche = "0.5"
 MLDataUtils = "0.5"
 MLDatasets = "0.7"
 NumericalTypeAliases = "0.1, 0.2"
