--- a/Project.toml
+++ b/Project.toml
@@ -37,6 +37,7 @@ MLDataUtils = "0.5"
 MLDatasets = "0.7"
 NumericalTypeAliases = "0.1, 0.2"
 Parameters = "0.12"
+Plots = "1"
 Pluto = "0.19"
 PlutoUI = "0.7"
 PrecompileSignatures = "3"
