Update contributing structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# Project ignores
+# -----------------------------------------------------------------------------
+# PROJECT IGNORES
+# -----------------------------------------------------------------------------
 
 # Ignore work files/folders
 work/**
@@ -41,10 +43,9 @@ docs/site/
 # environment.
 Manifest.toml
 
-# ------------------------------------------------ #
+# -----------------------------------------------------------------------------
 # PYTHON GITHUB IGNORES TEMPLATE
-# ------------------------------------------------ #
-
+# -----------------------------------------------------------------------------
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
