--- a/Project.toml
+++ b/Project.toml
@@ -31,6 +31,7 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 [compat]
 AdaptiveResonance = "0.8"
 ArgParse = "1"
+CSV = "0.10"
 DataStructures = "0.18"
 DocStringExtensions = "0.8, 0.9"
 DrWatson = "2"
