--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 PrecompileSignatures = "91cefc8d-f054-46dc-8f8c-26e11d7c5411"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
