--- a/Project.toml
+++ b/Project.toml
@@ -39,6 +39,7 @@ DataFrames = "1"
 DataStructures = "0.18"
 DocStringExtensions = "0.8, 0.9"
 DrWatson = "2"
+InvertedIndices = "1"
 Lerche = "0.5"
 MLDataUtils = "0.5"
 MLDatasets = "0.7"
