Dev distributed baseline experiments

--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 InvertedIndices = "41ab1584-1d38-5bbf-9106-f11c6c58b48f"
+Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 Lerche = "d42ef402-04e6-4356-9f73-091573ea58dc"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MLDataUtils = "cc2ba9b6-d476-5e6d-8eaf-a92d5412d41d"
