CompatHelper: add new compat entry for Latexify at version 0.16, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -40,6 +40,7 @@ DataFrames = "1"
 DataStructures = "0.18"
 DocStringExtensions = "0.8, 0.9"
 DrWatson = "2"
+Latexify = "0.16"
 Lerche = "0.5"
 MLDataUtils = "0.5"
 MLDatasets = "0.7"
