Add lung cancer dataset, wine dataset, rework plot

--- a/Project.toml
+++ b/Project.toml
@@ -7,11 +7,13 @@ version = "0.1.0"
 AdaptiveResonance = "3d72adc0-63d3-4141-bf9b-84450dd0395b"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+ClusterValidityIndices = "2fefd308-f647-4698-a2f0-e90cfcbca9ad"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
 InvertedIndices = "41ab1584-1d38-5bbf-9106-f11c6c58b48f"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 Lerche = "d42ef402-04e6-4356-9f73-091573ea58dc"
