--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 ClusterValidityIndices = "2fefd308-f647-4698-a2f0-e90cfcbca9ad"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
@@ -18,8 +19,8 @@ InvertedIndices = "41ab1584-1d38-5bbf-9106-f11c6c58b48f"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 Lerche = "d42ef402-04e6-4356-9f73-091573ea58dc"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
-MLDataUtils = "cc2ba9b6-d476-5e6d-8eaf-a92d5412d41d"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
+MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
 NumericalTypeAliases = "be9b823e-291e-41a1-b8ce-806204e78f92"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
@@ -43,7 +44,6 @@ DataStructures = "0.18"
 DocStringExtensions = "0.8, 0.9"
 DrWatson = "2"
 Lerche = "0.5"
-MLDataUtils = "0.5"
 MLDatasets = "0.7"
 NumericalTypeAliases = "0.1, 0.2"
 Parameters = "0.12"
