--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -4,8 +4,8 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 Lerche = "d42ef402-04e6-4356-9f73-091573ea58dc"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
-MLDataUtils = "cc2ba9b6-d476-5e6d-8eaf-a92d5412d41d"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
+MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
 OAR = "2c0fe338-9bab-4ad6-9854-394aaab43699"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
