--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ ArgParse = "1"
 CSV = "0.10"
 DataFrames = "1"
 DataStructures = "0.18"
+DelimitedFiles = "1"
 DocStringExtensions = "0.8, 0.9"
 DrWatson = "2"
 Lerche = "0.5"
