CompatHelper: add new compat entry for ClusterValidityIndices at version 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -39,6 +39,7 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 AdaptiveResonance = "0.8"
 ArgParse = "1"
 CSV = "0.10"
+ClusterValidityIndices = "0.6"
 DataFrames = "1"
 DataStructures = "0.18"
 DocStringExtensions = "0.8, 0.9"
