CompatHelper: add new compat entry for MLUtils at version 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -45,6 +45,7 @@ DocStringExtensions = "0.8, 0.9"
 DrWatson = "2"
 Lerche = "0.5"
 MLDatasets = "0.7"
+MLUtils = "0.4"
 NumericalTypeAliases = "0.1, 0.2"
 Parameters = "0.12"
 Plots = "1"
