--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 AdaptiveResonance = "0.8"
 ArgParse = "1"
 CSV = "0.10"
+Clustering = "0.15"
 DataFrames = "1"
 DataStructures = "0.18"
 DocStringExtensions = "0.8, 0.9"
