--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 AdaptiveResonance = "3d72adc0-63d3-4141-bf9b-84450dd0395b"
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 ClusterValidityIndices = "2fefd308-f647-4698-a2f0-e90cfcbca9ad"
@@ -31,7 +32,6 @@ PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 PrecompileSignatures = "91cefc8d-f054-46dc-8f8c-26e11d7c5411"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
@@ -54,7 +54,6 @@ Pluto = "0.19"
 PlutoUI = "0.7"
 PrecompileSignatures = "3"
 ProgressMeter = "1"
-Reexport = "1"
 Revise = "3"
 StatsPlots = "0.15"
 YAML = "0.4"
