Add and dev Aqua tests

--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,10 @@
 name = "OAR"
 uuid = "2c0fe338-9bab-4ad6-9854-394aaab43699"
-authors = ["Sasha Petrenko <sap625@umsystem.edu>"]
+authors = ["Sasha Petrenko <sap625@mst.edu>"]
 version = "0.1.0"
 
 [deps]
 AdaptiveResonance = "3d72adc0-63d3-4141-bf9b-84450dd0395b"
-Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 ClusterValidityIndices = "2fefd308-f647-4698-a2f0-e90cfcbca9ad"
@@ -16,7 +15,6 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
-GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
 InvertedIndices = "41ab1584-1d38-5bbf-9106-f11c6c58b48f"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 Lerche = "d42ef402-04e6-4356-9f73-091573ea58dc"
@@ -48,7 +46,6 @@ DataStructures = "0.18"
 DelimitedFiles = "1"
 DocStringExtensions = "0.8, 0.9"
 DrWatson = "2"
-GraphRecipes = "0.5"
 InvertedIndices = "1"
 Latexify = "0.16"
 Lerche = "0.5"
@@ -65,10 +62,3 @@ Revise = "3"
 StatsPlots = "0.15"
 YAML = "0.4"
 julia = "1"
-
-[extras]
-SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test", "SafeTestsets"]
