CompatHelper: add new compat entry for Statistics at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -59,6 +59,7 @@ PlutoUI = "0.7"
 PrecompileSignatures = "3"
 ProgressMeter = "1"
 Revise = "3"
+Statistics = "1"
 StatsPlots = "0.15"
 YAML = "0.4"
 julia = "1"
